--- a/G26K_9/G26K_9_BOOT_DSP/makefile
+++ b/G26K_9/G26K_9_BOOT_DSP/makefile
@@ -23,7 +23,7 @@ make : .SYMBOLIC
 !ifneq version Win32_Debug
 	@call wmake -h -f makedep version=$(version) cppdir=$(cppdir) objdir=$(objdir)
 !endif
-	@call wmake $(__MAKEOPTS__) -f makeobj version=$(version) cppdir=$(cppdir) objdir=$(objdir)
+	@call wmake $(__MAKEOPTS__) -f makeobj version=$(version) buildtool=$(buildtool) cppdir=$(cppdir) objdir=$(objdir)
 
 
 ##################################################################################################
