--- a/G26K_9/G26K_9_DSP/G26K_9_DSP.vcproj
+++ b/G26K_9/G26K_9_DSP/G26K_9_DSP.vcproj
@@ -23,12 +23,12 @@
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="wmake -h version=Debug"
-				ReBuildCommandLine="wmake -h -a version=Debug"
+				BuildCommandLine="make -h version=Debug"
+				ReBuildCommandLine="make -h -a version=Debug"
 				CleanCommandLine="@del /Q .\Debug\*.*"
 				Output="$(OutDir)\g26p.dxe"
 				PreprocessorDefinitions="__DEBUG;"
-				IncludeSearchPath="c:\Program Files (x86)\Analog Devices\VisualDSP 5.1.2\Blackfin\include;..\..\..\G_LIBS_BF592\cpp;"
+				IncludeSearchPath="$(ADI_CCES)\Blackfin\include;..\..\..\G_LIBS_BF592\cpp;"
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
@@ -45,12 +45,12 @@
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="wmake -h version=Release"
-				ReBuildCommandLine="wmake -h -a version=Release"
+				BuildCommandLine="make -h version=Release"
+				ReBuildCommandLine="make -h -a version=Release"
 				CleanCommandLine="@del /Q .\Release\*.*"
 				Output="$(OutDir)\g26p.dxe"
 				PreprocessorDefinitions=""
-				IncludeSearchPath="c:\Program Files (x86)\Analog Devices\VisualDSP 5.1.2\Blackfin\include;..\..\..\G_LIBS_BF592\cpp;"
+				IncludeSearchPath="$(ADI_CCES)\Blackfin\include;..\..\..\G_LIBS_BF592\cpp;"
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
