--- a/G26K_1_V2/G26K_1_V2_MEM/G26K_1_V2_MEM.vcproj
+++ b/G26K_1_V2/G26K_1_V2_MEM/G26K_1_V2_MEM.vcproj
@@ -26,8 +26,8 @@
 				ReBuildCommandLine="wmake -h -a version=Debug targetcpu=SAME53"
 				CleanCommandLine="@del /Q $(OutDir)\*.*"
 				Output="$(OutDir)\G26K_1_V2_MEM_SAME53.axf"
-				PreprocessorDefinitions="_DEBUG,__softfp=,CPU_SAME53"
-				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS_ARM\cpp;$(ARMCC50INC);"
+				PreprocessorDefinitions="_DEBUG,__softfp=,CPU_SAME53,__CC_ARM"
+				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS_ARM\cpp;$(ARMCC50INC);$(ProjectDir)..\..\Include;"
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
@@ -46,8 +46,8 @@
 				ReBuildCommandLine="wmake -h -a version=Release targetcpu=SAME53"
 				CleanCommandLine="@del /Q $(OutDir)\*.*"
 				Output="$(OutDir)\G26K_1_V2_MEM_SAME53.axf"
-				PreprocessorDefinitions="__softfp=,CPU_SAME53"
-				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS_ARM\cpp;$(ARMCC50INC);"
+				PreprocessorDefinitions="__softfp=,CPU_SAME53,__CC_ARM"
+				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS_ARM\cpp;$(ARMCC50INC);$(ProjectDir)..\..\Include;"
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
@@ -133,6 +133,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\Include\g_dsp.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Include\g_moto.h"
+				>
+			</File>
 			<File
 				RelativePath=".\cpp\hardware.h"
 				>
