--- a/G26K_9V2/G26K.9V2.BOOT/makefile
+++ b/G26K_9V2/G26K.9V2.BOOT/makefile
@@ -25,7 +25,7 @@ objdir = $(version)
 make : .SYMBOLIC
 	@call wmake -h -f mkmodules cppdir=$(cppdir)\ objdir=$(objdir)\
 !ifneq version Win32_Debug
-	@rem call wmake -d -h -f makedep targetcpu=$(targetcpu) version=$(version) cppdir=$(cppdir) objdir=$(objdir)
+	@call wmake -h -f makedep targetcpu=$(targetcpu) version=$(version) cppdir=$(cppdir) objdir=$(objdir)
 !endif
 	@call wmake $(__MAKEOPTS__) -f makeobj targetcpu=$(targetcpu) version=$(version) cppdir=$(cppdir) objdir=$(objdir)
 
