--- a/G26K_1_V2/G26K_1_V2_MEM/G26K_1_V2_MEM.vcproj
+++ b/G26K_1_V2/G26K_1_V2_MEM/G26K_1_V2_MEM.vcproj
@@ -27,7 +27,7 @@
 				CleanCommandLine="@del /Q $(OutDir)\*.*"
 				Output="$(OutDir)\G26K_1_V2_MEM_SAME53.axf"
 				PreprocessorDefinitions="_DEBUG,__softfp=,CPU_SAME53,__CC_ARM"
-				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS_ARM\cpp;$(ARMCC50INC);$(ProjectDir)..\..\Include;"
+				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS\cpp;$(ARMCC50INC);$(ProjectDir)..\..\Include;"
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
@@ -47,7 +47,7 @@
 				CleanCommandLine="@del /Q $(OutDir)\*.*"
 				Output="$(OutDir)\G26K_1_V2_MEM_SAME53.axf"
 				PreprocessorDefinitions="__softfp=,CPU_SAME53,__CC_ARM"
-				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS_ARM\cpp;$(ARMCC50INC);$(ProjectDir)..\..\Include;"
+				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS\cpp;$(ARMCC50INC);$(ProjectDir)..\..\Include;"
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
@@ -67,7 +67,7 @@
 				CleanCommandLine="@del /Q $(OutDir)\*.*"
 				Output="$(OutDir)\G26K_1_V2_MEM_WIN32.exe"
 				PreprocessorDefinitions="_DEBUG,__softfp=,WIN32"
-				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS_ARM\cpp;"
+				IncludeSearchPath="$(ProjectDir)..\..\..\G_LIBS\cpp;"
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
